Change build to emit JDK 11 compatible jar